--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <!-- Header with navigation -->
   <header class="sticky-top">
-    <nav id="mainNavbar" class="navbar navbar-expand-lg py-3">
+    <nav id="mainNavbar" class="navbar navbar-expand-lg">
       <div class="container-fluid">
 
         <!-- Brand -->
