--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <div class="container-fluid">
 
         <!-- Brand -->
-        <a class="navbar-brand d-flex align-items-center ms-3" href="index.html">
-          <img class="logo me-2" src="resources/images/logo.svg" alt="Wings of Love Photography Logo">
+        <a class="navbar-brand d-flex align-items-center ms-1" href="index.html">
+          <img class="logo" src="resources/images/logo.svg" alt="Wings of Love Photography Logo">
         </a>
 
         <div id="toggleContainer" class="d-flex align-items-center">
