--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="carousel-item active">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-10 d-flex justify-content-center">
+                  <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/portfolio1.jpg" class="img-fluid rounded"
                         alt="Smiling newlyweds in bushland" loading="lazy">
@@ -185,7 +185,7 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-10 d-flex justify-content-center">
+                  <div class="col-12 col-md-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/portfolio2.jpg" class="img-fluid rounded"
                         alt="Mother in floral dress kissing baby daughter" loading="lazy">
@@ -199,7 +199,7 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-10 d-flex justify-content-center">
+                  <div class="col-12 col-md-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/portfolio3.jpg" class="img-fluid rounded"
                         alt="Two newly engaged men looking at engagement ring" loading="lazy">
@@ -213,7 +213,7 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-10 d-flex justify-content-center">
+                  <div class="col-12 col-md-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/portfolio4.jpg" class="img-fluid rounded"
                         alt="Bride and groom in green grass field" loading="lazy">
@@ -227,7 +227,7 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-10 d-flex justify-content-center">
+                  <div class="col-12 col-md-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/portfolio5.jpg" class="img-fluid rounded"
                         alt="Newlyweds grinning at each other under veil" loading="lazy">
@@ -241,7 +241,7 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-10 d-flex justify-content-center">
+                  <div class="col-12 col-md-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/portfolio6.jpg" class="img-fluid rounded"
                         alt="Smiling portrait of man in field" loading="lazy">
@@ -255,7 +255,7 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-10 d-flex justify-content-center">
+                  <div class="col-12 col-md-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/portfolio7.jpg" class="img-fluid rounded"
                         alt="Family in park expecting new baby" loading="lazy">
@@ -269,7 +269,7 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-10 d-flex justify-content-center">
+                  <div class="col-12 col-md-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/portfolio8.jpg" class="img-fluid rounded"
                         alt="Newlyweds walking back down aisle through crowd" loading="lazy">
@@ -470,14 +470,14 @@
               <div class="carousel-item active">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-8 col-lg-4 d-flex justify-content-center">
+                  <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/testimonial1.jpg" class="img-fluid rounded"
                         alt="Groom holding bride close" loading="lazy">
                     </figure>
                   </div>
                   <!-- Text -->
-                  <div class="col-8 col-lg-4 d-flex flex-column justify-content-center p-5">
+                  <div class="col-10 col-md-8 col-lg-4 d-flex flex-column justify-content-center p-5">
                     <blockquote>
                       <p>
                         "Emily made our wedding day feel effortless. She captured the big and small moments so
@@ -493,14 +493,14 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-8 col-lg-4 d-flex justify-content-center">
+                  <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/testimonial2.jpg" class="img-fluid rounded"
                         alt="Family with tweens sitting in a field" loading="lazy">
                     </figure>
                   </div>
                   <!-- Text -->
-                  <div class="col-8 col-lg-4 d-flex flex-column justify-content-center p-5">
+                  <div class="col-10 col-md-8 col-lg-4 d-flex flex-column justify-content-center p-5">
                     <blockquote>
                       <p>
                         "Emily made our session comfortable for everyone. The photos feel genuine and timeless -
@@ -516,14 +516,14 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-8 col-lg-4 d-flex justify-content-center">
+                  <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/testimonial3.jpg" class="img-fluid rounded"
                         alt="Two newly engaged men hugging" loading="lazy">
                     </figure>
                   </div>
                   <!-- Text -->
-                  <div class="col-8 col-lg-4 d-flex flex-column justify-content-center p-5">
+                  <div class="col-10 col-md-8 col-lg-4 d-flex flex-column justify-content-center p-5">
                     <blockquote>
                       <p>
                         "We felt so comfortable during our engagement shoot. The photos look completely natural and
