updated image organisation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="robots" content="noindex, nofollow">
 
   <!-- Title -->
-  <title>Wings of Love Photography | Wedding & Family Photography in Devonport, Northwest Tasmania</title>
+  <title>Wings of Love Photography</title>
 
   <!-- Favicon -->
   <link rel="icon" href="resources/images/favicon.svg" type="image/svg+xml" />
@@ -105,7 +105,9 @@
 
     <!-- Hero Section -->
     <section
-      class="container-fluid hero d-flex justify-content-center align-items-center text-center position-relative overflow-hidden">
+      class="container-fluid hero d-flex justify-content-center align-items-center text-center position-relative overflow-hidden"
+      style="background-image: url('resources/images/pages/home/hero.jpg');">
+      <!-- Photo by Callie Morgan on Unsplash -->
       <div class="row w-100 justify-content-center">
         <div class="col-10">
           <!-- Main Heading -->
@@ -130,7 +132,7 @@
         <!-- Image Column -->
         <div class="col-12 col-lg-6 d-flex justify-content-center justify-content-lg-end p-0 p-lg-5 order-2 order-lg-1">
           <figure>
-            <img src="resources/images/introduction.jpg" class="img-fluid rounded"
+            <img src="resources/images/pages/home/introduction.jpg" class="img-fluid rounded"
               alt="Newlyweds embracing during sunset photography">
             <!-- Photo by Jakob Owens on Unsplash -->
           </figure>
@@ -173,7 +175,7 @@
                   <!-- Image -->
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/portfolio1.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/portfolio1.jpg" class="img-fluid rounded"
                         alt="Smiling newlyweds in bushland" loading="lazy">
                         <!-- Photo by Martin Baron on Unsplash -->
                     </figure>
@@ -185,9 +187,9 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-12 col-md-10 d-flex justify-content-center">
+                  <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/portfolio2.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/portfolio2.jpg" class="img-fluid rounded"
                         alt="Mother in floral dress kissing baby daughter" loading="lazy">
                         <!-- Photo by Kabita Darlami on Unsplash -->
                     </figure>
@@ -199,9 +201,9 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-12 col-md-10 d-flex justify-content-center">
+                  <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/portfolio3.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/portfolio3.jpg" class="img-fluid rounded"
                         alt="Two newly engaged men looking at engagement ring" loading="lazy">
                         <!-- Photo by In Lieu In View Photography on Unsplash -->
                     </figure>
@@ -213,9 +215,9 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-12 col-md-10 d-flex justify-content-center">
+                  <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/portfolio4.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/portfolio4.jpg" class="img-fluid rounded"
                         alt="Bride and groom in green grass field" loading="lazy">
                         <!-- Photo by Devon Divine on Unsplash -->
                     </figure>
@@ -227,9 +229,9 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-12 col-md-10 d-flex justify-content-center">
+                  <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/portfolio5.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/portfolio5.jpg" class="img-fluid rounded"
                         alt="Newlyweds grinning at each other under veil" loading="lazy">
                         <!-- Photo by Lori DeJong on Unsplash -->
                     </figure>
@@ -241,9 +243,9 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-12 col-md-10 d-flex justify-content-center">
+                  <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/portfolio6.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/portfolio6.jpg" class="img-fluid rounded"
                         alt="Smiling portrait of man in field" loading="lazy">
                         <!-- Photo by Warren on Unsplash -->
                     </figure>
@@ -255,9 +257,9 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-12 col-md-10 d-flex justify-content-center">
+                  <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/portfolio7.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/portfolio7.jpg" class="img-fluid rounded"
                         alt="Family in park expecting new baby" loading="lazy">
                         <!-- Photo by Jennifer Kalenberg on Unsplash -->
                     </figure>
@@ -269,9 +271,9 @@
               <div class="carousel-item">
                 <div class="row d-flex justify-content-center align-items-center p-5">
                   <!-- Image -->
-                  <div class="col-12 col-md-10 d-flex justify-content-center">
+                  <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/portfolio8.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/portfolio8.jpg" class="img-fluid rounded"
                         alt="Newlyweds walking back down aisle through crowd" loading="lazy">
                         <!-- Photo by Victoria Priessnitz on Unsplash -->
                     </figure>
@@ -332,7 +334,7 @@
           <a href="weddings.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
-                <img src="resources/images/weddings.jpg" class="card-img-top" alt="Newlyweds embracing at sunset">
+                <img src="resources/images/pages/home/weddings.jpg" class="card-img-top" alt="Newlyweds embracing at sunset">
                 <!-- Photo by Eugenia Pan'kiv on Unsplash -->
               </figure>
               <div class="card-body">
@@ -349,7 +351,7 @@
           <a href="couples.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
-                <img src="resources/images/couples.jpg" class="card-img-top" alt="Couple kissing in field">
+                <img src="resources/images/pages/home/couples.jpg" class="card-img-top" alt="Couple kissing in field">
                 <!-- Photo by Hana El Zohiry on Unsplash -->
               </figure>
               <div class="card-body">
@@ -366,7 +368,7 @@
           <a href="portraits.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
-                <img src="resources/images/portraits.jpg" class="card-img-top" alt="Woman smiling in field">
+                <img src="resources/images/pages/home/portraits.jpg" class="card-img-top" alt="Woman smiling in field">
                 <!-- Photo by Slav Romanov on Unsplash -->
               </figure>
               <div class="card-body">
@@ -383,7 +385,7 @@
           <a href="family.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
-                <img src="resources/images/family.jpg" class="card-img-top"
+                <img src="resources/images/pages/home/family.jpg" class="card-img-top"
                   alt="Family with two tweens standing in front of a old wooden shed">
                 <!-- Photo by Dylan Michaud on Unsplash -->
               </figure>
@@ -400,7 +402,7 @@
           <a href="events.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
-                <img src="resources/images/events.jpg" class="card-img-top" alt="Guests enjoying a celebration">
+                <img src="resources/images/pages/home/events.jpg" class="card-img-top" alt="Guests enjoying a celebration">
                 <!-- Stock photo ID:2156559899 -->
               </figure>
               <div class="card-body">
@@ -443,7 +445,7 @@
         <!-- Image Column -->
         <div class="col-12 col-lg-6 d-flex justify-content-center justify-content-lg-end p-0 p-lg-5">
           <figure>
-            <img src="resources/images/portrait.jpg" class="img-fluid rounded"
+            <img src="resources/images/pages/home/portrait.jpg" class="img-fluid rounded"
               alt="Photographer smiling behind camera">
             <!-- Stock photo ID:1742679982 -->
           </figure>
@@ -472,7 +474,7 @@
                   <!-- Image -->
                   <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/testimonial1.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/testimonial1.jpg" class="img-fluid rounded"
                         alt="Groom holding bride close" loading="lazy">
                     </figure>
                   </div>
@@ -495,7 +497,7 @@
                   <!-- Image -->
                   <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/testimonial2.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/testimonial2.jpg" class="img-fluid rounded"
                         alt="Family with tweens sitting in a field" loading="lazy">
                     </figure>
                   </div>
@@ -518,7 +520,7 @@
                   <!-- Image -->
                   <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
-                      <img src="resources/images/testimonial3.jpg" class="img-fluid rounded"
+                      <img src="resources/images/pages/home/testimonial3.jpg" class="img-fluid rounded"
                         alt="Two newly engaged men hugging" loading="lazy">
                     </figure>
                   </div>
@@ -568,7 +570,9 @@
     </section>
 
     <!-- Summary CTA Banner -->
-    <section class="container-fluid summary d-flex align-items-center py-0 py-lg-5 mt-5">
+    <section class="container-fluid summary d-flex align-items-center py-0 py-lg-5 mt-5"
+    style="background-image: url('resources/images/pages/home/summary.jpg')">
+    <!-- Photo by Foto Pettine on Unsplash -->
       <div class="row w-100">
         <div class="col-12 text-center p-5">
           <h2 class="mb-4">Capture Moments, Create Memories</h2>
