removed portraits and events services

--- a/index.html
+++ b/index.html
@@ -85,10 +85,8 @@
               </a>
               <ul class="dropdown-menu text-center text-lg-start">
                 <li><a class="dropdown-item" href="weddings.html">Weddings</a></li>
-                <li><a class="dropdown-item" href="couples.html">Engagements & Couples</a></li>
-                <li><a class="dropdown-item" href="portraits.html">Portraits</a></li>
+                <li><a class="dropdown-item" href="couples.html">Couples & Engagements</a></li>
                 <li><a class="dropdown-item" href="family.html">Family & Maternity</a></li>
-                <li><a class="dropdown-item" href="events.html">Events</a></li>
               </ul>
             </li>
 
@@ -218,8 +216,8 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio4.jpg" class="img-fluid rounded"
-                        alt="Bride and groom in green grass field" loading="lazy">
-                        <!-- Photo by Devon Divine on Unsplash -->
+                        alt="Newlyweds grinning at each other under veil" loading="lazy">
+                        <!-- Photo by Lori DeJong on Unsplash -->
                     </figure>
                   </div>
                 </div>
@@ -232,8 +230,8 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio5.jpg" class="img-fluid rounded"
-                        alt="Newlyweds grinning at each other under veil" loading="lazy">
-                        <!-- Photo by Lori DeJong on Unsplash -->
+                        alt="Family in park expecting new baby" loading="lazy">
+                        <!-- Photo by Jennifer Kalenberg on Unsplash -->
                     </figure>
                   </div>
                 </div>
@@ -246,34 +244,6 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio6.jpg" class="img-fluid rounded"
-                        alt="Smiling portrait of man in field" loading="lazy">
-                        <!-- Photo by Warren on Unsplash -->
-                    </figure>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Portfolio 7 -->
-              <div class="carousel-item">
-                <div class="row d-flex justify-content-center align-items-center p-5">
-                  <!-- Image -->
-                  <div class="col-12 col-sm-10 d-flex justify-content-center">
-                    <figure class="m-0">
-                      <img src="resources/images/pages/home/portfolio7.jpg" class="img-fluid rounded"
-                        alt="Family in park expecting new baby" loading="lazy">
-                        <!-- Photo by Jennifer Kalenberg on Unsplash -->
-                    </figure>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Portfolio 8 -->
-              <div class="carousel-item">
-                <div class="row d-flex justify-content-center align-items-center p-5">
-                  <!-- Image -->
-                  <div class="col-12 col-sm-10 d-flex justify-content-center">
-                    <figure class="m-0">
-                      <img src="resources/images/pages/home/portfolio8.jpg" class="img-fluid rounded"
                         alt="Newlyweds walking back down aisle through crowd" loading="lazy">
                         <!-- Photo by Victoria Priessnitz on Unsplash -->
                     </figure>
@@ -309,10 +279,6 @@
                   aria-label="Slide 5"></button>
                 <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="5"
                   aria-label="Slide 6"></button>
-                <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="6"
-                  aria-label="Slide 7"></button>
-                <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="7"
-                  aria-label="Slide 8"></button>
               </div>
           </div>
 
@@ -330,7 +296,7 @@
       <div class="row justify-content-center g-4">
 
         <!-- Weddings -->
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-4">
           <a href="weddings.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
@@ -346,8 +312,8 @@
           </a>
         </div>
 
-        <!-- Engagements & Couples -->
-        <div class="col-12 col-md-6 col-lg-4">
+        <!-- Couples & Engagements -->
+        <div class="col-12 col-md-4">
           <a href="couples.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
@@ -355,7 +321,7 @@
                 <!-- Photo by Hana El Zohiry on Unsplash -->
               </figure>
               <div class="card-body">
-                <h5 class="card-title">Engagements & Couples</h5>
+                <h5 class="card-title">Couples & Engagements</h5>
                 <p class="card-text">Natural, relaxed portraits that celebrate your love story exactly as it
                   is - authentic, fun, and full of connection.</p>
               </div>
@@ -363,25 +329,8 @@
           </a>
         </div>
 
-        <!-- Portraits -->
-        <div class="col-12 col-md-6 col-lg-4">
-          <a href="portraits.html">
-            <div class="card h-100 border-0 shadow-sm">
-              <figure class="mb-0">
-                <img src="resources/images/pages/home/portraits.jpg" class="card-img-top" alt="Woman smiling in field">
-                <!-- Photo by Slav Romanov on Unsplash -->
-              </figure>
-              <div class="card-body">
-                <h5 class="card-title">Portraits</h5>
-                <p class="card-text">Individual portraits that capture your personality, confidence, and the unique
-                  spark that makes you, you.</p>
-              </div>
-            </div>
-          </a>
-        </div>
-
         <!-- Family & Maternity -->
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-4">
           <a href="family.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
@@ -392,22 +341,6 @@
               <div class="card-body">
                 <h5 class="card-title">Family & Maternity</h5>
                 <p class="card-text">Heartfelt photos that celebrate your family and all the love.</p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <!-- Events -->
-        <div class="col-12 col-md-6 col-lg-4">
-          <a href="events.html">
-            <div class="card h-100 border-0 shadow-sm">
-              <figure class="mb-0">
-                <img src="resources/images/pages/home/events.jpg" class="card-img-top" alt="Guests enjoying a celebration">
-                <!-- Stock photo ID:2156559899 -->
-              </figure>
-              <div class="card-body">
-                <h5 class="card-title">Events</h5>
-                <p class="card-text">Capturing the energy, smiles, and emotions of your gatherings.</p>
               </div>
             </div>
           </a>
