--- a/index.html
+++ b/index.html
@@ -291,8 +291,7 @@
     <section class="container p-5 text-center p-5">
       <h2 class="mb-4">Capturing Life's Beautiful Moments</h2>
       <p class="mb-5">
-        Every couple, every family, every individual has a story worth telling.
-
+       Celebrating love, connection, and the bonds that make family and relationships truly special.
       <div class="row justify-content-center g-4">
 
         <!-- Weddings -->
