--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <!-- Text Column -->
         <div class="col-12 col-lg-6 py-5 order-1 order-lg-2">
 
-          <h1 class="mb-5">Capturing the Moments That Matter Most</h1>
+          <h2 class="mb-5">Capturing the Moments That Matter Most</h2>
 
           <p>At Wings of Love Photography, we specialise in capturing the timeless beauty of love, relationships, and
             life's most cherished moments. Whether it's your wedding day, engagement, or family portraits, we create
@@ -288,14 +288,14 @@
     </section>
 
     <!-- Types of Photography Section -->
-    <section class="container p-5 text-center p-5">
+    <section class="container text-center p-5">
       <h2 class="mb-4">Capturing Life's Beautiful Moments</h2>
       <p class="mb-5">
        Celebrating love, connection, and the bonds that make family and relationships truly special.
-      <div class="row justify-content-center g-4">
+      <div class="row justify-content-center g-5">
 
         <!-- Weddings -->
-        <div class="col-12 col-md-4">
+        <div class="col-10 col-md-8 col-lg-3">
           <a href="weddings.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
@@ -303,7 +303,7 @@
                 <!-- Photo by Eugenia Pan'kiv on Unsplash -->
               </figure>
               <div class="card-body">
-                <h5 class="card-title">Weddings</h5>
+                <h3 class="card-title">Weddings</h3>
                 <p class="card-text">From sweet glances to joyful celebrations, I capture the love and laughter that
                   make your day unforgettable.</p>
               </div>
@@ -312,7 +312,7 @@
         </div>
 
         <!-- Couples & Engagements -->
-        <div class="col-12 col-md-4">
+        <div class="col-10 col-md-8 col-lg-3">
           <a href="couples.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
@@ -320,7 +320,7 @@
                 <!-- Photo by Hana El Zohiry on Unsplash -->
               </figure>
               <div class="card-body">
-                <h5 class="card-title">Couples & Engagements</h5>
+                <h3 class="card-title">Couples & Engagements</h3>
                 <p class="card-text">Natural, relaxed portraits that celebrate your love story exactly as it
                   is - authentic, fun, and full of connection.</p>
               </div>
@@ -329,7 +329,7 @@
         </div>
 
         <!-- Family & Maternity -->
-        <div class="col-12 col-md-4">
+        <div class="col-10 col-md-8 col-lg-3">
           <a href="family.html">
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
@@ -338,7 +338,7 @@
                 <!-- Photo by Dylan Michaud on Unsplash -->
               </figure>
               <div class="card-body">
-                <h5 class="card-title">Family & Maternity</h5>
+                <h3 class="card-title">Family & Maternity</h3>
                 <p class="card-text">Heartfelt photos that celebrate your family and all the love.</p>
               </div>
             </div>
@@ -356,7 +356,7 @@
         <!-- Text Column -->
         <div class="col-12 col-lg-6 py-5">
 
-          <h1 class="mb-5">Hi I'm Emily</h1>
+          <h2 class="mb-5">Hi I'm Emily</h2>
 
           <p>
             I'm so glad you're here! Photography has always been my way of celebrating the little
