--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Hero Section -->
     <section
       class="container-fluid hero d-flex justify-content-center align-items-center text-center position-relative overflow-hidden"
-      style="background-image: url('resources/images/pages/home/hero.jpg');">
+      style="background-image: url('resources/images/pages/home/hero.jpg'); background-position: top;">
       <!-- Photo by Callie Morgan on Unsplash -->
       <div class="row w-100 justify-content-center">
         <div class="col-10">
@@ -503,7 +503,7 @@
 
     <!-- Summary CTA Banner -->
     <section class="container-fluid summary d-flex align-items-center py-0 py-lg-5 mt-5"
-    style="background-image: url('resources/images/pages/home/summary.jpg')">
+    style="background-image: url('resources/images/pages/home/summary.jpg'); background-position: center bottom;">
     <!-- Photo by Foto Pettine on Unsplash -->
       <div class="row w-100">
         <div class="col-12 text-center p-5">
