--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="row align-items-center">
 
         <!-- Image Column -->
-        <div class="col-12 col-lg-6 d-flex justify-content-center justify-content-lg-end p-0 p-lg-5 order-2 order-lg-1">
+        <div class="col-12 col-lg-6 d-flex justify-content-center justify-content-lg-end px-0 px-lg-5 py-5 order-2 order-lg-1">
           <figure>
             <img src="resources/images/pages/home/introduction.jpg" class="img-fluid rounded"
               alt="Newlyweds embracing during sunset photography">
@@ -300,7 +300,7 @@
             <div class="card h-100 border-0 shadow-sm">
               <figure class="mb-0">
                 <img src="resources/images/pages/home/weddings.jpg" class="card-img-top" alt="Newlyweds embracing at sunset">
-                <!-- Photo by Eugenia Pan'kiv on Unsplash -->
+                <!-- Photo by Aaron Bond on Unsplash -->
               </figure>
               <div class="card-body">
                 <h3 class="card-title">Weddings</h3>
@@ -354,7 +354,7 @@
       <div class="row align-items-center">
 
         <!-- Text Column -->
-        <div class="col-12 col-lg-6 py-5">
+        <div class="col-12 col-lg-6 px-0 px-lg-5 py-5">
 
           <h2 class="mb-5">Hi I'm Emily</h2>
 
