--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio1.jpg" class="img-fluid rounded"
-                        alt="Smiling newlyweds in bushland" loading="lazy">
+                        alt="Smiling newlyweds in bushland">
                         <!-- Photo by Martin Baron on Unsplash -->
                     </figure>
                   </div>
@@ -188,7 +188,7 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio2.jpg" class="img-fluid rounded"
-                        alt="Mother in floral dress kissing baby daughter" loading="lazy">
+                        alt="Mother in floral dress kissing baby daughter">
                         <!-- Photo by Kabita Darlami on Unsplash -->
                     </figure>
                   </div>
@@ -202,7 +202,7 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio3.jpg" class="img-fluid rounded"
-                        alt="Two newly engaged men looking at engagement ring" loading="lazy">
+                        alt="Two newly engaged men looking at engagement ring">
                         <!-- Photo by In Lieu In View Photography on Unsplash -->
                     </figure>
                   </div>
@@ -216,7 +216,7 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio4.jpg" class="img-fluid rounded"
-                        alt="Newlyweds grinning at each other under veil" loading="lazy">
+                        alt="Newlyweds grinning at each other under veil">
                         <!-- Photo by Lori DeJong on Unsplash -->
                     </figure>
                   </div>
@@ -230,7 +230,7 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio5.jpg" class="img-fluid rounded"
-                        alt="Family in park expecting new baby" loading="lazy">
+                        alt="Family in park expecting new baby">
                         <!-- Photo by Jennifer Kalenberg on Unsplash -->
                     </figure>
                   </div>
@@ -244,7 +244,7 @@
                   <div class="col-12 col-sm-10 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/portfolio6.jpg" class="img-fluid rounded"
-                        alt="Newlyweds walking back down aisle through crowd" loading="lazy">
+                        alt="Newlyweds walking back down aisle through crowd">
                         <!-- Photo by Victoria Priessnitz on Unsplash -->
                     </figure>
                   </div>
@@ -407,7 +407,7 @@
                   <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/testimonial1.jpg" class="img-fluid rounded"
-                        alt="Groom holding bride close" loading="lazy">
+                        alt="Groom holding bride close">
                     </figure>
                   </div>
                   <!-- Text -->
@@ -430,7 +430,7 @@
                   <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/testimonial2.jpg" class="img-fluid rounded"
-                        alt="Family with tweens sitting in a field" loading="lazy">
+                        alt="Family with tweens sitting in a field">
                     </figure>
                   </div>
                   <!-- Text -->
@@ -453,7 +453,7 @@
                   <div class="col-10 col-md-8 col-lg-4 d-flex justify-content-center">
                     <figure class="m-0">
                       <img src="resources/images/pages/home/testimonial3.jpg" class="img-fluid rounded"
-                        alt="Two newly engaged men hugging" loading="lazy">
+                        alt="Two newly engaged men hugging">
                     </figure>
                   </div>
                   <!-- Text -->
